[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/DebugUI.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="valuesLabel" type="RichTextLabel" parent="."]
margin_right = 472.0
margin_bottom = 290.0
bbcode_text = "SAMPLE TEXT"
text = "SAMPLE TEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="keyLabel" type="RichTextLabel" parent="."]
anchor_left = 1.0
anchor_top = -0.001
anchor_right = 1.0
anchor_bottom = -0.001
margin_left = -293.636
margin_top = 0.0795838
margin_right = 0.36377
margin_bottom = 141.08
text = "SAMPLE TEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="messageLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -260.0
margin_top = -119.0
margin_right = 259.0
text = "SAMPLE TEXT"

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
